# rayTracer

./: .gitignore
ray/: CMakeLists.txt  os  ray-solution  raycheck.py  re  sys  tarfile
ray/assets/scenes/: gen_images.sh
ray/raycheck.out/refcache/: signature
ray/src/: RayTracer.cpp  RayTracer.h
ray/src/SceneObjects/: trimesh.cpp
ray/src/scene/: cubeMap.cpp  light.cpp  light.h  material.cpp  material.h  ray.h  scene.cpp  scene.h
ray/src/ui/: CommandLineUI.cpp  GraphicalUI.cpp  TraceUI.h
scenes/: gen_images_release.sh
